--- a/style.css
+++ b/style.css
@@ -67,6 +67,18 @@ html {
   margin-top: 200px;
 }
 
+h1 {
+  font-family: Quicksand;
+  color: white;
+  font-size: 25px;
+  text-align: center;
+  text-shadow:
+  -1px -1px 0 #000,
+  1px -1px 0 #000,
+  -1px 1px 0 #000,
+  1px 1px 0 #000;
+}
+
 .contentbox {
   background-image: url("https://live.staticflickr.com/5095/5403920563_1f3528feb7_b.jpg");
   position: fixed;
@@ -120,7 +132,6 @@ html {
   font-family: quicksand;
   position: absolute;
   width: 200px;
-  color: white;
   color: white;
   font-size: 20px;
   text-shadow:
