--- a/contactstyle.css
+++ b/contactstyle.css
@@ -107,17 +107,19 @@ h1 {
   width: 100%;
   justify-content: center;
   align-items: center;
+  overflow: auto;
 }
 
 fieldset {
     border: 1px solid #ccc;
-    padding: 20px;
+    padding: 15px;
     border-radius: 5px;
 }
 
 label {
     display: block;
     margin-bottom: 5px;
+    padding-right: 5px;
 }
 
 input, textarea {
