--- a/contactstyle.css
+++ b/contactstyle.css
@@ -103,6 +103,7 @@ h1 {
 .contentbox {
   background-image: url("https://live.staticflickr.com/5095/5403920563_1f3528feb7_b.jpg");
   position: relative;
+  font-family: Quicksand;
   height: 100%;
   width: 60%;
   justify-content: center;
