--- a/contactstyle.css
+++ b/contactstyle.css
@@ -102,13 +102,23 @@ h1 {
 
 .contentbox {
   background-image: url("https://live.staticflickr.com/5095/5403920563_1f3528feb7_b.jpg");
-  position: relative;
+  position: fixed;
   font-family: Quicksand;
   height: 100%;
-  width: 60%;
+  width: 100%;
   justify-content: center;
   align-items: center;
   overflow: auto;
+}
+
+.content {
+    position: relative;
+    height: 100%;
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: auto;
 }
 
 fieldset {
