--- a/contactstyle.css
+++ b/contactstyle.css
@@ -7,7 +7,7 @@ html {
 
 .header {
   width:100%;
-  height:20%;
+  height: 200px;
   font-family: Quicksand;
   display: flex;
   justify-content: center;
@@ -102,19 +102,19 @@ h1 {
 
 .contentbox {
   background-image: url("https://live.staticflickr.com/5095/5403920563_1f3528feb7_b.jpg");
-  position: fixed;
+  position: relative;
   font-family: Quicksand;
   height: 100%;
   width: 100%;
   justify-content: center;
   align-items: center;
   overflow: auto;
+  padding: 20px;
 }
 
 .content {
     position: relative;
     height: 100%;
-    width: 60%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -124,6 +124,7 @@ h1 {
 fieldset {
     border: 1px solid #ccc;
     background-color:white;
+    width:350px;
     padding: 15px;
     border-radius: 5px;
 }
