--- a/aboutstyle.css
+++ b/aboutstyle.css
@@ -133,3 +133,27 @@ h1 {
     padding: 12px;
     margin-top: 30px;
   }
+
+ul {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+}
+
+li {
+  text-decoration: none;
+  display: inline;
+  background-color: #ffe0f8;
+  border-radius: 5px;
+  padding: 5px;
+  margin: 5px;
+}
+
+.btn {
+  font-family: Arial, Helvetica, sans-serif;  
+  text-transform: uppercase;
+}  
+
+.btn:hover .btn-slide-show-text1 {
+  margin-left: 65px;
+}
