--- a/contactstyle.css
+++ b/contactstyle.css
@@ -122,7 +122,7 @@ h1 {
 }
 
 fieldset {
-    border: 1px solid #ccc;
+    border: 1px dashed #ccc;
     background-color:white;
     width:350px;
     padding: 15px;
