--- a/aboutstyle.css
+++ b/aboutstyle.css
@@ -157,3 +157,32 @@ li {
 .btn:hover .btn-slide-show-text1 {
   margin-left: 65px;
 }
+
+.btn-arrow-slide-circle {
+  transition: all .45s cubic-bezier(.65,0,.076,1);
+  position: relative;
+  display: block;
+  margin: 0;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 1.625rem;
+}
+
+.btn-arrow-slide-cont {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  outline: none;
+  border: 0;
+  vertical-align: middle;
+  text-decoration: none;
+  padding: 0;
+  font-size: inherit;
+  font-family: inherit;
+  width: 180px;
+  height: auto;
+}
+
+.btn-arrow-slide-cont--black .btn-arrow-slide-circle {
+  background: #333;
+}
