--- a/aboutstyle.css
+++ b/aboutstyle.css
@@ -138,6 +138,8 @@ h1 {
     Auther: Abdelrhman Said
 */
 
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -148,6 +150,15 @@ h1 {
 *:active {
   outline: none !important;
   -webkit-tap-highlight-color: transparent;
+}
+
+ul {
+  display: grid;
+  height: 100%;
+  width: 100%;
+  font-family: "Poppins", sans-serif;
+  place-items: center;
+  background: linear-gradient(315deg, #ffffff, #d7e1ec);
 }
 
 .wrapper {
