--- a/aboutstyle.css
+++ b/aboutstyle.css
@@ -167,7 +167,7 @@ ul {
 
 .wrapper .icon {
   position: relative;
-  background: #ffffff;
+  background: #ffe0f8;
   border-radius: 50%;
   padding: 15px;
   margin: 10px;
