--- a/aboutstyle.css
+++ b/aboutstyle.css
@@ -142,8 +142,6 @@ p {
     Auther: Abdelrhman Said
 */
 
-@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
-
 * {
   margin: 0;
   padding: 0;
@@ -160,7 +158,7 @@ ul {
   display: grid;
   height: 100%;
   width: 100%;
-  font-family: "Poppins", sans-serif;
+  font-family: Quicksand;
   place-items: center;
 }
 
