--- a/aboutstyle.css
+++ b/aboutstyle.css
@@ -176,6 +176,7 @@ ul {
   width: 44px;
   height: 44px;
   font-size: 18px;
+  font: var(--fa-font-brands);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -189,6 +190,7 @@ ul {
   position: absolute;
   top: 0;
   font-size: 14px;
+  font-family: Quicksand;
   background: #ffffff;
   color: #ffffff;
   padding: 5px 8px;
@@ -216,11 +218,13 @@ ul {
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
+  font: var(--fa-font-brands);
 }
 
 .wrapper .icon:hover span,
 .wrapper .icon:hover .tooltip {
   text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.1);
+  font: var(--fa-font-brands);
 }
 
 .wrapper .facebook:hover,
