--- a/portstyle.css
+++ b/portstyle.css
@@ -115,13 +115,18 @@ a {
 }
 
 .container  {
-  margin:0 auto;
+  margin-top: 215px;
   display:grid;
+  grid-template-columns: 30% 30% 30%;
+  grid-template-rows: auto;
+  justify-items: center;
+  row-gap: 10px;
+  column-gap: 10px;
 }
 
 .thumb-box {
   display:flex;
-  max-width:33.3333%;
+  max-width:30%;
   margin:0 15px;
   position:relative;
   border-radius: 20px;
