--- a/portstyle.css
+++ b/portstyle.css
@@ -92,7 +92,7 @@ h1 {
   font-family: Quicksand;
   color: white;
   position:relative;
-  margin-top: 205px;
+  margin-top: 210px;
   font-size: 25px;
   text-align: center;
   text-shadow:
@@ -119,7 +119,7 @@ a {
 .container  {
   display:grid;
   grid-template-rows: 30% 30% 30%;
-  grid-template-columns: 250px 250px;
+  grid-template-columns: auto;
   justify-items: center;
   row-gap: 10px;
   column-gap: 10px;
