--- a/portstyle.css
+++ b/portstyle.css
@@ -133,8 +133,9 @@ a {
 .thumb-box {
   display:flex;
   max-width: 23%;
-  padding: 5px;
+  padding: 15px;
   margin:0 15px;
+  margin-bottom: 10px;
   position:relative;
   border-radius: 20px;
 }
